Added new CV and updated homepage

--- a/info.html
+++ b/info.html
@@ -26,7 +26,6 @@
         yrSpan.textContent = currentYear;
       });
     </script>
-
   </head>
 
   <body>
@@ -52,75 +51,110 @@
         </div>
 
         <div class="wrapper">
-            <section class="intro">
-              <div class="intro__content">
-                  <img class="img" src="assets/img/jacket-no-glasses.jpg" width=600px alt="Ary photo"></img>
-                  <div>
-                    <p class="info__text">Hi, I'm Ary.</p><br>
-                    <p class="info__text">
-                      I write code, I always have a new project on the go. I am a husband & father who loves cooking.</p><br>
-                    <p class="info__text">
-                      I decided to retrain and change career after more than 10 years in the photography industry, where I was advising photographers on the best equipment available to achieve their creative vision.</p><br>
-                    <p class="info__text">
-                      I recently discovered the beauty of <strong>React.js</strong> and have been <em>hook</em>ed. My dream job would be as a full-stack developer.
-                    </p><br>
-                    <p>In my spare time, I love playing Lego with my son, having teddy bear picnics with my daughter and spending time with my wife. </p><br>
-                  </div>
+          <section class="intro">
+            <div class="intro__content">
+              <img
+                class="img"
+                src="assets/img/jacket-no-glasses.jpg"
+                width="600px"
+                alt="Ary photo"
+              />
+              <div>
+                <p class="info__text">Hi, I'm Ary.</p>
+                <br />
+                <p class="info__text">
+                  I write code, I always have a new project on the go. I am a
+                  husband & father who loves cooking.
+                </p>
+                <br />
+                <p class="info__text">
+                  I decided to retrain and change career after more than 10
+                  years in the photography industry, where I was advising
+                  photographers on the best equipment available to achieve their
+                  creative vision.
+                </p>
+                <br />
+                <p class="info__text">
+                  I recently discovered the beauty of
+                  <strong>React.js</strong> and have been <em>hook</em>ed. My
+                  dream job would be as a full-stack developer.
+                </p>
+                <br />
+                <p>
+                  In my spare time, I love playing Lego with my son, having
+                  teddy bear picnics with my daughter and spending time with my
+                  wife.
+                </p>
+                <br />
+              </div>
+            </div>
+          </section>
+
+          <div class="info__content">
+            <section class="info-1">
+              <h3 class="info__title">Skills</h3>
+              <div class="language__list">
+                <div class="language__list-htmlCss">
+                  <i class="fab fa-html5" aria-hidden="true"></i>
+                  <i class="fab fa-css3-alt" aria-hidden="true"></i>
+                  <i class="fab fa-bootstrap" aria-hidden="true"></i>
+                  <i class="fab fa-sass" aria-hidden="true"></i>
+                  <i class="fab fa-wordpress"></i>
+                </div>
+                <div class="language__list-js">
+                  <i class="fab fa-js" aria-hidden="true"></i>
+                  <i class="fab fa-react" aria-hidden="true"></i>
+                  <i class="fab fa-node-js" aria-hidden="true"></i>
+                </div>
               </div>
             </section>
-                  
-            <div class="info__content">
-              <section class="info-1">
-                    <h3 class="info__title">Skills</h3>
-                  <div class="language__list">
-                    <div class="language__list-htmlCss">
-                      <i class="fab fa-html5" aria-hidden="true"></i>
-                      <i class="fab fa-css3-alt" aria-hidden="true"></i>
-                      <i class="fab fa-bootstrap" aria-hidden="true"></i>
-                      <i class="fab fa-sass" aria-hidden="true"></i>
-                      <i class="fab fa-wordpress"></i>
+            <br />
 
-                    </div>
-                    <div class="language__list-js">
-                      <i class="fab fa-js" aria-hidden="true"></i>
-                      <i class="fab fa-react" aria-hidden="true"></i>
-                      <i class="fab fa-node-js" aria-hidden="true"></i>
-                    </div>
-                  </div>
-              </section>
-              <br>
-  
-              <section class="info-2">
-                    <h3 class="info__title">Career Statement</h3>
-                    <div class="quote">
-
-                      <p>I’m seeking a role where I can be at my most creative; a way to express myself, not only a “<em>9 to 5</em>”.</p><br>
-                      <p>My biggest strength is quickly understanding my client’s vision and finding the best tools available to make it a reality.</p><br>
-                      <p>I'm very sociable and easy to talk to which helps me build close working relationships with my colleagues and clients.</p>
-                    </div>
-                    <br>
-                    <br>
+            <section class="info-2">
+              <h3 class="info__title">Career Statement</h3>
+              <div class="quote">
+                <p>
+                  I’m seeking a role where I can be at my most creative; a way
+                  to express myself, not only a “<em>9 to 5</em>”.
+                </p>
+                <br />
+                <p>
+                  My biggest strength is quickly understanding my client’s
+                  vision and finding the best tools available to make it a
+                  reality.
+                </p>
+                <br />
+                <p>
+                  I'm very sociable and easy to talk to which helps me build
+                  close working relationships with my colleagues and clients.
+                </p>
+              </div>
+              <br />
+              <br />
               <p class="info__text">
-                Right now, I'm looking for a full-time position where I can continue to build my skill-set.
+                Right now, I'm looking for a full-time position where I can
+                continue to build my skill-set.
               </p>
-              <br>
+              <br />
+            </section>
 
-                  </section>
-              
-              <section class="download">
-                <a class="download__cv" href="assets/doc/Ary_Vidot-Front_end_Dev-2021-CV.pdf" target="_blank">DOWNLOAD CV</a>
-              </section>
-            </div>
+            <section class="download">
+              <a
+                class="download__cv"
+                href="assets/doc/Ary_Vidot_Junior_React Front-end_Dev_Q4-2022_CV.pdf"
+                target="_blank"
+                >DOWNLOAD CV</a
+              >
+            </section>
+          </div>
         </div>
-
       </section>
     </main>
 
     <footer>
       <div class="copyright">
         <p>
-          <span class="year">2020</span> -
-          <a href="index.html">Ary Vidot </a
+          <span class="year">2020</span> - <a href="index.html">Ary Vidot </a
           ><span class="dot">.</span> All rights reserved
         </p>
       </div>
@@ -128,10 +162,21 @@
 
     <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
 
     <script src="/js/menu.js"></script>
   </body>
