--- a/info.html
+++ b/info.html
@@ -141,7 +141,7 @@
             <section class="download">
               <a
                 class="download__cv"
-                href="assets/doc/Ary_Vidot_Junior_React Front-end_Dev_Q4-2022_CV.pdf"
+                href="assets/doc/Ary_Vidot_Junior_React_Front-end_Dev_Q4-2022 CV.pdf"
                 target="_blank"
                 >DOWNLOAD CV</a
               >
