--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <div class="hero__content">
           <h1 class="hero__logo">ARY VIDOT</h1>
-          <h2 class="hero__description">React Front-end Developer</h2>
+          <h2 class="hero__description">Front-end Developer</h2>
 
           <a href="contact-form.html" class="hero-btn">GET IN TOUCH</a>
         </div>
