updated grid layout on Portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -164,7 +164,7 @@
                 alt="Sunnyside Agency thumbnail"
                 class="card__image"
               />
-              <h2 class="card__title">Landing Page</h2>
+              <h2 class="card__title">Agency <br />Landing Page</h2>
 
               <p class="tech">
                 <span>HTML</span> <span>Sass</span> <span>JavaScript</span>
